--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,14 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "socket.io-client": "^4.6.2"
+    "socket.io-client": "^4.6.2",
+    "vite": "5.2.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
